--- a/webUI/src/app/app.component.html
+++ b/webUI/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+
+<nav>
+  <ul>
+    <li><a href="" [routerLink]="['/login']">Login</a></li>
+    <li></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
