add more routes

--- a/webUI/src/app/app.component.html
+++ b/webUI/src/app/app.component.html
@@ -4,8 +4,12 @@
 
 <nav>
   <ul>
-    <li><a href="" [routerLink]="['/login']">Login</a></li>
-    <li></li>
+    <li>
+      <a href="" [routerLink]="['/login']">Login</a>
+    </li>
+    <li>
+       <a href="" [routerLink]="['/upload-file']">upload-file</a>
+    </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
