update load loop

--- a/WebUI.v1/app/views/dashboard.html
+++ b/WebUI.v1/app/views/dashboard.html
@@ -1,38 +1,94 @@
 ﻿<h3>dashboard</h3>
 
- <section>
-    <input type="file" id="selFile" file-model accept=".pdf,.jpg,.jpeg,.png,.doc,.docx" multiple style="display:none" />
-    <a onclick="document.getElementById('selFile').click();"
-       class="btn btn-info"
-       popover-title="Attach files"
-       popover-trigger="'mouseenter'"
-       uib-popover="Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB.">
-        Get Files 
-    </a>
-</section>     
-<br />
-<div class="panel panel-default" ng-if="files.length">
-    <div class="panel-heading">{{files.length>1?'Files':'File'}} - <span class="badge" ng-if="files.length">{{files.length}}</span></div>
-    <div class="panel-body">
-        <ol class="list-unstyled">
-            <li ng-repeat="file in files track by $index">
-                <a href="#" ng-click="$event.preventDefault();dash.removeAttach($index);">
-                    <span class="glyphicon glyphicon-remove-circle text-danger"></span>
-                </a> {{file.name}}
-            </li>
-        </ol>
+<div class="row">
+    <div class="col-lg-9">
+        <table class="table table-responsive">
+            <thead>
+                <tr>
+                    <td>File</td>
+                    <td>Date</td>
+                    <td>Whom</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+            </tbody>
+
+        </table>
+
     </div>
-    <div class="panel-footer">
-        <button class="btn btn-success">
-            Upload attachment
-        </button>
+    <div class="col-lg-3">
+
+        <form ng-submit="dash.uploadFiles();">
+            <fieldset>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <input type="file" id="selFile" file-model accept=".pdf,.jpg,.jpeg,.png,.doc,.docx" multiple style="display:none" />
+                        <a onclick="document.getElementById('selFile').click();"
+                           class="btn btn-primary"
+                           popover-title="Attach files"
+                           popover-trigger="'mouseenter'"
+                           uib-popover="Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB.">
+                            <span class="glyphicon glyphicon-upload"></span> Upload {{files.length>1?'Files':'File'}}
+                            <span class="badge" ng-if="files.length"> {{files.length}}</span>
+                        </a>
+                    </div>
+                    <div class="panel-body" ng-if="files.length">
+                        <ol class="list-unstyled">
+                            <li ng-repeat="file in files track by $index">
+                                <a href="#" ng-click="$event.preventDefault();dash.removeAttach($index);">
+                                    <span class="glyphicon glyphicon-remove-circle text-danger"></span>
+                                </a> {{file.name}}
+                            </li>
+                        </ol>
+                    </div>
+                    <div class="panel-footer" ng-if="files.length">
+                        <button class="btn btn-success" type="submit">
+                            Submit
+                        </button>
+
+                    </div>
+                </div>
+            </fieldset>
+
+        </form>
 
     </div>
 </div>
 
- 
 
- 
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
