--- a/WebUI.v1/app/views/login.html
+++ b/WebUI.v1/app/views/login.html
@@ -4,15 +4,17 @@
 <div class="modal-body">
     <form ng-submit="login.ok();">
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            <label for="usrname">User Name/Email</label>
+            <input type="text" class="form-control" id="usrname" 
+                   placeholder="User Name/Email" ng-model="login.usr" />
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="usrpwd">Password</label>
+            <input type="password" class="form-control" id="usrpwd" 
+                   placeholder="Password" ng-model="login.pwd" />
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-        <a class="btn btn-warning" ng-click="login.cancel();" >Cancel</a>
+        <a class="btn btn-warning" ng-click="login.cancel();">Cancel</a>
     </form>
 
 </div> 
