--- a/WebUI.v1/app/views/display-files.html
+++ b/WebUI.v1/app/views/display-files.html
@@ -11,11 +11,12 @@
                     <td>File</td>
                     <td>Date</td>
                     <td>Whom</td>
+                    <td><span class="glyphicon glyphicon-download"></span></td>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-if="!df.files.length">
-                    <td colspan="3">
+                    <td colspan="4">
                        <span class="glyphicon glyphicon-refresh spin"></span> <span class="text-primary">Loading....</span>
                     </td>
                 </tr>
@@ -23,6 +24,9 @@
                     <td>{{f.col1}}</td>
                     <td>{{f.col2}}</td>
                     <td>{{f.col3}}</td>
+                    <td><a class="btn btn-warning">Edit</a></td>
+                  
+
                 </tr>
             </tbody>
         </table>
