--- a/WebUI.v1/app/views/dashboard.html
+++ b/WebUI.v1/app/views/dashboard.html
@@ -14,7 +14,8 @@
                            class="btn btn-primary"
                            popover-title="Attach files"
                            popover-trigger="'mouseenter'"
-                           uib-popover="Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB.">
+                           uib-popover="Allowed file types are pdf, jpg, jpeg, png, doc, docx and file size must be less than 5MB."
+                           popover-placement="right-bottom">
                             <span class="glyphicon glyphicon-upload"></span> Upload {{files.length>1?'Files':'File'}}
                             <span class="badge" ng-if="files.length"> {{files.length}}</span>
                         </a>
